Fix svg alignment on global navigation modal

--- a/assets/scss/partials/navigation/menu/_item-content.scss
+++ b/assets/scss/partials/navigation/menu/_item-content.scss
@@ -56,6 +56,7 @@
 
                 svg {
                     position: absolute;
+                    top: 0;
                 }
             }
         }
